Add some analysis.

--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -999,8 +999,11 @@ Also shown is the outline of Laurentia, with the location of Duluth drawn as a s
 
 \subsection{Plate speeds for Mesoproterozoic Laurentia}
 \label{sec:laurentian_plate_speeds}
-Both the one Euler pole and the two Euler pole fits are able to do a reasonably good job of fitting the APW path.
-The two Euler pole case finds a well-constrained chaingepoint (see Figure I need to make this figure) at $\sim$1098 Ma.
+Both the one Euler pole and the two Euler pole fits are able to do a good job of fitting the APW path, with a few caveats.
+The one Euler pole inversion does least well fitting the Mamainse lower normal and upper reversed pole,
+and the North Shore Volcanic Group pole, with the recovered paths skirting the edges of those poles.
+Furthermore, neither inversion does has a great fit with the Michipicoten Island Formation.
+The two Euler pole case finds a well-constrained changepoint (see Figure I need to make this figure) at $\sim$1098 Ma.
 This slowdown in plate speed is consistent with the conclusions of \citet{davis1997geochronology} 
 and \citet{swanson2009no}, though the speeds in our model reflect overall plate speeds 
 (rather than just latitudinal speeds) and naturally incorporate age uncertainties.
@@ -1010,8 +1013,23 @@ These speeds are much higher than any plate speeds for the Cenozoic \citep{zahir
 which could be explained by faster average plate motions in the Proterozoic.
 Alternatively, it could be due to a true polar wander (TPW) event \citep{evans2003true, swanson2009no},
 which can move the solid earth at faster rates than maximum plate speeds \citep{cambiotti2011new}.
-A scaling analysis by Rose and Buffett (2016) found that in a younger, more vigorously convecting
-planet, TPW becomes more likely.
+Rose and Buffett (2016) performed a scaling analysis for rates of true polar wander and 
+found that in a younger, more vigorously convecting planet, TPW becomes more likely.
+If we regard such high plate velocities as unlikely, then TPW becomes a good alternative explanation.
+
+TPW is a difficult signal to disentangle from plate motions, since any given APW path
+can be the result of TPW, plate tectonics, or some combination of the two.
+An Euler pole that describes true polar wander must be 90$^\circ$ from the spin axis,
+and if we assume that GAD holds, then the PEP for a true polar wander event must be
+90$^\circ$ from the paleomagnetic poles. The PEP for which we invert in the single
+Euler pole case is well short of 90$^\circ$ from the poles, so it cannot be due to TPW only.
+It can, however, be caused by a combination of plate motion and TPW.
+
+The PEPs in the two Euler pole inversion do allow for Euler poles that are 90$^\circ$ from
+the paleomagnetic poles, and thus could be interpreted as primarily due to TPW.
+The first rotation is $2^\circ-4^\circ$/Myr, and the second is $1^\circ-2^\circ$/Myr.
+These TPW rates are well within the maximum rate estimate of 6$^\circ$/Myr from Rose and Buffett (2016),
+and only moderately higher than the Pleistocene estimates from \citet{cambiotti2011new}.
 
 \section{Conclusions}
 \label{sec:conclusions}
