Fix bibtex entry.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -469,8 +469,8 @@
 }
 
 @article{torsvik1996continental,
-  title={Continental break-up and collision in the Neoproterozoic and Palaeozoic—a tale of Baltica and Laurentia},
-  author={Torsvik, TH and Smethurst, MA and Meert, JOSEPH G and Van der Voo, R and McKerrow, WS and Brasier, MD and Sturt, BA and Walderhaug, HJ},
+  title={Continental break-up and collision in the Neoproterozoic and Palaeozoic-a tale of Baltica and Laurentia},
+  author={Torsvik, TH and Smethurst, MA and Meert, Joseph G and Van der Voo, R and McKerrow, WS and Brasier, MD and Sturt, BA and Walderhaug, HJ},
   journal={Earth-Science Reviews},
   volume={40},
   number={3},
